Final Project Ready

--- a/convert_upload.ipynb
+++ b/convert_upload.ipynb
@@ -22,7 +22,8 @@
     "import pandas as pd\n",
     "import boto3\n",
     "import configparser\n",
-    "import os"
+    "import os\n",
+    "from pathlib import Path"
    ]
   },
   {
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-10-08T20:30:19.906892Z",
@@ -43,8 +44,8 @@
    },
    "outputs": [],
    "source": [
-    "folder_path = \"/Users/pranavprajapati/Desktop/Projects_2019/Capstone_Data_Engineering/data/\"  # Destination folder\n",
-    "save_path = \"/Users/pranavprajapati/Downloads/yelp-dataset/\"  # Data folder path\n",
+    "folder_path = \"/path/to/destination/\"  # Destination folder\n",
+    "save_path = \"/Users/pranavprajapati/Downloads/yelp-dataset/\"  # The place where you downloaded the dataset\n",
     "\n",
     "\n",
     "def readFiles(save_path):\n",
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -74,12 +75,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since there are 5.2 million reviews and lots of user data. I decided to take a portion out of them since my machine was not very powerful. You can choose to not perform these transformations and directly convert to csv."
+    "**Since there are 5.2 million reviews and lots of user data. I decided to take a portion out of them. You can choose to not perform these transformations and directly convert to csv. Please do that only if your computer/system has good memory capacity.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -100,10 +101,10 @@
     "    # EXTRACT 1000000 from JSON\n",
     "    if file_type == 'json':\n",
     "        if \"review\" in file_name or \"user\" in file_name:\n",
-    "            print(\"SAMPLE 1000000 LINES\")\n",
+    "            print(\"SAMPLE 1 million LINES\")\n",
     "            json = open(path + file, 'r', encoding=\"utf8\")\n",
-    "            new = open(folder_path + file_name +\n",
-    "                       \"_100k.json\", 'w+', encoding=\"utf8\")\n",
+    "            new = open(folder_path + file_name \n",
+    "                       , 'w+', encoding=\"utf8\")\n",
     "            for i in range(1, 1000000):\n",
     "                new.write(json.readline())\n",
     "            new.close()\n",
@@ -115,19 +116,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Path(\"path/to/current/file.foo\").rename(\"path/to/new/destination/for/file.foo\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remove unwanted data from certain files:"
+    "**If not converting the json files, directly move them to the destination folder**"
    ]
   },
   {
@@ -136,7 +128,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "Path(\"path/to/current/review.json\").rename(\"path/to/the/destination/folder/review.json\")\n",
+    "Path(\"path/to/current/user.json\").rename(\"path/to/the/destination/folder/user.json\")"
    ]
   },
   {
@@ -147,8 +140,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uploading to S3. Some files may take longer. It can happen that there is a session timeout. In that case just upload only one file at a time or go to s3 console and upload it manually."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,13 +158,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "s3 = boto3.client('s3', aws_access_key_id=AWS_KEY_ID,\n",
-    "                  aws_secret_access_key=AWS_SECRET)\n",
-    "bucket_name = 'pranav-capstone'"
+    "                  aws_secret_access_key=AWS_SECRET)"
    ]
   },
   {
@@ -173,13 +172,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_path = \"/Users/pranavprajapati/Desktop/Projects_2019/Capstone_Data_Engineering/data/\"\n",
+    "folder_path = \"/path/to/destination/created/earlier\"\n",
     "file_names = [folder_path+file for file in os.listdir(folder_path)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,13 +205,6 @@
     "buckets = s3.list_buckets()\n",
     "print(buckets)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
